# kafka-chat

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
nginx/: Dockerfile  nginx.conf
services/auth/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/auth/src/application/common/: id_provider.py  jwt_processor.py  password_hasher.py
services/auth/src/domain/common/: token.py
services/auth/src/domain/events/: auth.py  base.py
services/auth/src/domain/exceptions/: user.py
services/auth/src/domain/users/: repository.py  user.py
services/auth/src/infrastructure/: config.py  settings.py
services/auth/src/infrastructure/authentication/: id_provider.py  jwt_processor.py  password_hasher.py
services/auth/src/infrastructure/di/: container.py
services/auth/src/infrastructure/message_broker/: base.py  broker.py  converters.py  message.py
services/auth/src/infrastructure/persistence/: main.py
services/auth/src/infrastructure/utils/: get_env.py
services/auth/src/presentation/: exc_handlers.py  main.py
services/auth/src/presentation/dependencies/: auth.py
services/chats/: .env.example  Dockerfile  pyproject.toml
services/chats/src/api/v1/: router.py  schemas.py
services/chats/src/application/commands/: chats.py
services/chats/src/application/services/: chat.py
services/chats/src/application/usecases/: create.py  get.py
services/chats/src/core/: container.py  settings.py
services/chats/src/domain/chats/: entities.py  repository.py  service.py
services/chats/src/domain/exceptions/: chats.py
services/chats/src/domain/messages/: entities.py
services/chats/src/gateways/postgresql/: database.py  dto.py  models.py  repositories.py  transaction.py
services/chats/src/utils/: common.py  dependencies.py  jwt_processor.py
services/notifications/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/notifications/app/: main.py
services/notifications/app/src/core/: container.py  settings.py
services/notifications/app/src/domain/: events.py
services/notifications/app/src/utils/: common.py
services/users/: Dockerfile  pyproject.toml  requirements.txt
services/users/src/: main.py
services/users/src/api/v1/: exc_handlers.py  router.py  schemas.py
services/users/src/application/commands/: user.py
services/users/src/application/services/: friends.py  user.py
services/users/src/application/usecases/: create.py  delete.py  get.py
services/users/src/core/: container.py  settings.py
services/users/src/domain/: commands.py  entities.py  exceptions.py  services.py  use_cases.py
services/users/src/domain/exceptions/: auth.py  base.py  friends.py  user.py
services/users/src/domain/users/: entities.py  repository.py  service.py
services/users/src/gateways/postgresql/: dto.py  models.py  repositories.py
services/users/src/services/: user.py
services/users/src/utils/: common.py  dependencies.py  id_provider.py  jwt_processor.py
(+32 files in other folders)
