[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
dishka = "^1.2.0"
fastapi = "^0.112.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
uvicorn = "^0.30.5"
aiohttp = "^3.10.1"
orjson = "^3.10.6"
asyncpg = "^0.29.0"


[tool.poetry.group.test.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
